install-dump/2025-09-06-202911/longhorn/ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/auth-realm: Authentication Required
      nginx.ingress.kubernetes.io/auth-secret: longhorn-basic-auth
      nginx.ingress.kubernetes.io/auth-type: basic
      nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
    creationTimestamp: "2025-09-04T17:18:34Z"
    generation: 1
    labels:
      kustomize.toolkit.fluxcd.io/name: infra-longhorn
      kustomize.toolkit.fluxcd.io/namespace: flux-system
    name: longhorn-ui
    namespace: longhorn-system
    resourceVersion: "1598374"
    uid: e0e0e9ba-9edb-4750-8d46-779b79d718ff
  spec:
    ingressClassName: nginx
    rules:
    - host: longhorn.91-98-16-184.nip.io
      http:
        paths:
        - backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.104.168.151
kind: List
metadata:
  resourceVersion: ""
